--- a/xdcs-frontend/src/app/element/task-summary-item/task-summary-item.component.html
+++ b/xdcs-frontend/src/app/element/task-summary-item/task-summary-item.component.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="d-flex flex-row-reverse" [ngSwitch]="task.state">
-        <a href="#/task/asdf"
+        <a [routerLink]="'/tasks/' + task.id"
            class="btn btn-outline-primary item-details-button">Details</a>
         <a *ngSwitchCase="TaskState.IN_PROGRESS"
            href="#/task/cancel"
