PPXDCS-172 Store information in XDCS_LOG_ from which agent it has been received
Add info storage

--- a/xdcs-frontend/src/app/element/log-preview/log-preview.component.html
+++ b/xdcs-frontend/src/app/element/log-preview/log-preview.component.html
@@ -1,6 +1,12 @@
 <pre *ngIf="convert" class="log-output">
   <ng-container *ngFor="let line of lines">
     <div class="log-line">
+      <ng-container *ngIf="line.tag">
+        <div class="line-tag"
+             [style.min-width.ch]="tagWidth+2">
+          [{{ line.tag }}]
+        </div>
+       </ng-container>
       <div class="line-number" tooltip="{{ line.time | date:timePopupFormat }}">
         {{ line.lineNumber }}
       </div>
