--- a/xdcs-frontend/src/app/element/log-preview/log-preview.component.less
+++ b/xdcs-frontend/src/app/element/log-preview/log-preview.component.less
@@ -20,6 +20,12 @@ pre.log-output {
     filter: brightness(50%);
   }
 
+  .line-tag {
+    margin-right: 10px;
+    text-align: left;
+    filter: brightness(50%);
+  }
+
   .line-contents {
     flex-grow: 1;
   }
