--- a/xdcs-frontend/src/app/element/node-preview/node-preview.component.html
+++ b/xdcs-frontend/src/app/element/node-preview/node-preview.component.html
@@ -14,7 +14,7 @@
       <td>{{node.id}}</td>
     </tr>
     <tr>
-      <th scope="row">Time created</th>
+      <th scope="row">Node name</th>
       <td>{{node.name}}</td>
     </tr>
     <tr>
