--- a/xdcs-frontend/src/app/element/task-result-preview/task-result-preview.component.html
+++ b/xdcs-frontend/src/app/element/task-result-preview/task-result-preview.component.html
@@ -26,7 +26,7 @@
   </table>
   <tabset>
     <tab heading="Logs">
-      <app-log-preview [lines]="logLines"></app-log-preview>
+      <app-log-preview [lines]="logLines" [tagWidth]="tagWidth"></app-log-preview>
     </tab>
     <tab heading="Results"> ¯\_(ツ)_/¯</tab>
   </tabset>
