PPXDCS-173 Add information about which agent logged which line in REST API
Add info

--- a/xdcs-frontend/src/app/element/log-preview/log-preview.component.html
+++ b/xdcs-frontend/src/app/element/log-preview/log-preview.component.html
@@ -1,6 +1,9 @@
 <pre *ngIf="convert" class="log-output">
   <ng-container *ngFor="let line of lines">
     <div class="log-line">
+      <div class="line-agent">
+        {{ line.agentTag }} + ': '
+      </div>
       <div class="line-number" tooltip="{{ line.time | date:timePopupFormat }}">
         {{ line.lineNumber }}
       </div>
