PPXDCS-174 Add a filter for agents in logs
Add task select

--- a/xdcs-frontend/src/app/element/task-result-preview/task-result-preview.component.html
+++ b/xdcs-frontend/src/app/element/task-result-preview/task-result-preview.component.html
@@ -24,14 +24,21 @@
     </tr>
     </tbody>
   </table>
-  <tabset>
-    <tab heading="Logs">
-      <app-log-preview [lines]="logLines" [tagWidth]="tagWidth"></app-log-preview>
-    </tab>
-    <tab heading="Artifacts">
-      <ng-container [ngTemplateOutlet]="artifactsTemplate"></ng-container>
-    </tab>
-  </tabset>
+  <ng-container *ngIf="selectedNodes; else loading">
+    <app-multiselect-menu (selectionChange)="changeAgents($event)" [dropdownList]="nodes" [idField]="'id'"
+                          [textField]="'id'" [selectAll]="true"></app-multiselect-menu>
+    <tabset>
+      <tab heading="Logs">
+        <app-log-preview [lines]="logLines" [tagWidth]="tagWidth"></app-log-preview>
+      </tab>
+      <tab heading="Artifacts">
+        <ng-container [ngTemplateOutlet]="artifactsTemplate"></ng-container>
+      </tab>
+    </tabset>
+  </ng-container>
+  <ng-template #loading>
+    <app-loading></app-loading>
+  </ng-template>
 </div>
 
 <ng-template #artifactsTemplate>
