PPXDCS-128 Add an option to disable allocating pseudo-tty for docker containers + CR changes

--- a/xdcs-frontend/src/app/element/task-def-config/task-def-config.component.html
+++ b/xdcs-frontend/src/app/element/task-def-config/task-def-config.component.html
@@ -118,7 +118,7 @@
     <div class="mb-3">
       <label>
         <input type="checkbox" name="allocatePseudoTty"  [(ngModel)]="taskDefinition.config.allocatePseudoTty">
-        Allocate pseudo tty
+        Allocate pseudo TTY
       </label>
     </div>
   </ng-container>
