--- a/xdcs-frontend/src/app/view/tasks/tasks.component.html
+++ b/xdcs-frontend/src/app/view/tasks/tasks.component.html
@@ -1,16 +1,21 @@
 <app-navbar [fullscreenMode]="true"></app-navbar>
-<app-fullscreen-list (selectedChange)="onSelectionChange($event)" [(selected)]="selected" [data]="tasks">
+<app-fullscreen-list (selectedChange)="onSelectionChange($event)"
+                     [(selected)]="selected" [data]="tasks"
+                     [fetchedAll]="fetchedAll"
+                     (fetchNextPage)="fetchNextPage($event)">
   <ng-template #header let-item="header">
     <div>
       <button type="button"
               class="btn btn-outline-success float-right"
-              appOpenModal [modal]="NewTaskComponent">New task</button>
+              appOpenModal [modal]="NewTaskComponent">
+        New task
+      </button>
       <div class="clearfix"></div>
     </div>
   </ng-template>
   <ng-template #element let-item="element">
-      <app-task-status-icon [size]="'sm'" [task]="item"></app-task-status-icon>
-    {{item.name}}
+    <app-task-status-icon [size]="'sm'" [task]="item"></app-task-status-icon>
+    {{ item.name }}
   </ng-template>
 
   <ng-template #details let-item="selected">
