--- a/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
+++ b/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
@@ -31,7 +31,9 @@
           [openHandler]="openHandler"
           [importFileHandler]="importFileHandler"
           [createDirectoryHandler]="createDirectoryHandler"
-          [createFileHandler]="createFileHandler"></app-file-tree>
+          [createFileHandler]="createFileHandler"
+          [editAttributesHandler]="editAttributesHandler">
+        </app-file-tree>
       </div>
     </as-split-area>
     <as-split-area size="60">
