--- a/xdcs-frontend/src/app/element/task-definition-details/task-definition-details.component.html
+++ b/xdcs-frontend/src/app/element/task-definition-details/task-definition-details.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xl-6">
+  <div class="col-xl-6 overflow-auto">
     <h4 class="mb-3">Details</h4>
     <table class="table">
       <tbody>
@@ -39,7 +39,7 @@
       </tbody>
     </table>
   </div>
-  <div class="col-xl-6">
+  <div class="col-xl-6 overflow-auto">
     <ng-container class="mt-3"
                   *ngIf="['opencl', 'cuda'].includes(definition.config.type) && definition.config.kernelparams.length > 0">
       <h4 class="mb-3">Kernel parameters</h4>
