--- a/xdcs-frontend/src/app/element/upload-file/upload-file.component.less
+++ b/xdcs-frontend/src/app/element/upload-file/upload-file.component.less
@@ -1,11 +1,9 @@
-.file-uploader {
-  border: 2px dashed gray;
+:host {
+  width: 100%;
 }
-.inputfile {
-  width: 0.1px;
-  height: 0.1px;
-  opacity: 0;
+
+.file-label {
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
-  position: absolute;
-  z-index: -1;
 }
