--- a/xdcs-frontend/src/app/element/node-basic-info/node-basic-info.component.less
+++ b/xdcs-frontend/src/app/element/node-basic-info/node-basic-info.component.less
@@ -12,3 +12,12 @@
   width: 100%;
   margin: 0;
 }
+
+.unknown-name {
+  font-style: italic;
+  color: gray;
+
+  &:after {
+    content: 'Unknown';
+  }
+}
