Implement moving and renaming files

--- a/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
+++ b/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
@@ -32,6 +32,7 @@
           [importFileHandler]="importFileHandler"
           [createDirectoryHandler]="createDirectoryHandler"
           [createFileHandler]="createFileHandler"
+          [renameHandler]="renameHandler"
           [editAttributesHandler]="editAttributesHandler">
         </app-file-tree>
       </div>
