--- a/xdcs-frontend/src/app/element/multiselect-menu/multiselect-menu.component.html
+++ b/xdcs-frontend/src/app/element/multiselect-menu/multiselect-menu.component.html
@@ -6,7 +6,7 @@
     (onSelectAll)="emitAll()"
     [(ngModel)]="selectedItems"
     [data]="dropdownList"
-    [placeholder]="'Select agents'"
+    placeholder="Select agents"
     [settings]="dropdownSettings"
   ></ng-multiselect-dropdown>
 </ng-container>
